<resources>
    <string name="app_name">News Application</string>
    <string name="spinner">Spinner</string>
    <string name="login_text">Login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="forgot_text">Forgot Password?</string>
    <string name="topic1">Politics</string>
    <string name="topic2">Lifestyle</string>
    <string name="topic3">Sports</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="your_name">Your Name</string>
    <string name="header">NovWon</string>
    <string name="topic">Topics</string>
    <string name="longalong"></string>
    <string name="politicscontent1">Marcos: No need to adjust COVID-19 health status after WHO declaration</string>
    <string name="politicscontent2">US and Papua New Guinea poised to sign defense pact as Washington, Beijing vie for influence in the Pacific</string>
    <string name="politicscontent3">Manila court finds Bikoy guilty of perjury</string>
    <string name="politicscontent4">Online voting eyed for overseas voters in 2025 polls: Comelec</string>
    <string name="lifestylecontent1">Lifestyle changes may combat a dementia that strikes people in their 40s and 50s</string>
    <string name="lifestylecontent2">Lifestyle changes improved cognition in people at risk for Alzheimers, study shows</string>
    <string name="lifestylecontent3">Managing sleep, stress, nutrition for a healthy lifestyle</string>
    <string name="lifestylecontent4">Healthy Lifestyle Benefits: 5 Tips for Living Your Strongest, Healthiest Life Yet</string>
    <string name="sportscontent1">Christian Standhardinger retires from Gilas</string>
    <string name="sportscontent2">Philippines wraps up SEA Games in 5th place</string>
    <string name="politics">Politics</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="Sports">Sports</string>
    <string name="polDate2">Published May 22, 2023, 1:55:04 PM</string>
    <string name="polBody2">The United States and Papua New Guinea are poised to sign a new bilateral defense cooperation agreement – a move that has sparked controversy in the Pacific Island nation and comes as Washington and China jostle for influence in the region.\n

\nUS Secretary of State Antony Blinken and Papua New Guinea (PNG) Prime Minister James Marape were scheduled to sign the pact and a maritime security agreement during Blinken’s visit to the capital Port Moresby on Sunday and Monday, the US State Department said Thursday.\n \nAdvance text of the agreements were not released by either side, but the new defense cooperation was expected to expand US access to military and other facilities in PNG, bolstering Washington’s security ties in the South Pacific.\n

\nThat region – a constellation of sparsely populated island and archipelago nations and territories as well as New Zealand and Australia – has outsized strategic significance. The Pacific Islands, for example, were the site of decisive battles during World War Two.\n

\nThe region has taken on renewed importance for Washington as it seeks to bolster its relationships and presence in Asia amid rising tensions with an assertive China that’s rapidly expanded its naval capabilities in recent years.\n

\nThose concerns were heightened last year after Beijing signed a security pact with the Solomon Islands – and tried, but failed, to win support for a sweeping, regional trade and security communique with Pacific Island nations.\n

\nBlinken’s visit to PNG comes after US President Joe Biden last week cut short an Asia trip that would have included stops in Port Moresby and Sydney, Australia, due to ongoing debt ceiling negotiations at home.</string>
    <string name="polDate4">May 24, 2023, 4:15 pm</string>
    <string name="polBody4">The Commission on Elections (Comelec) said Wednesday it plans to introduce Internet voting for overseas voters in the May 2025 polls.\n

\nComelec chairperson George Erwin Garcia, in an interview, said the poll body has been "deeply exploring" the details of the plan and is preparing for the allocation of a budget for the measure as a matter of policy direction.\n

\nGarcia said this seeks to increase the overseas voter turnout, which only saw 34 percent in the 2022 polls, slightly higher than 31 percent in the 2019 polls.\n

\nHowever, he said postal and personal modes for absentee voting would still be available in the 2025 elections.\n

\n"If after the 2025 elections, we see that overseas voters patronized Internet voting and less have availed of the personal and postal voting, it is highly possible that the other two modes of voting will be phased out. If we can successfully implement Internet voting in the 2025 elections, it may eventually be the mode that will be left available," Garcia said.\n

\nHe noted that Internet voting would also require fewer expenses for the government.\n

\n"As we go on, overseas voting will likely require less budget," Garcia said.\n

\nEarlier, the Comelec said it is looking to use the Internet mode of voting in the next national elections, to encourage more Filipinos abroad to participate in the polls.\n

\nSection 28 of Republic Act 10590 states that the Commission "may explore other more efficient, reliable, and secure modes or systems, ensuring the secrecy and sanctity of the entire process, whether paper-based, electronic-based, or Internet-based technology or such other latest technology available."\n

\nAside from voting in embassies and consular offices, Filipinos abroad may also avail of postal voting to be able to participate in the country’s electoral exercises.\n

\nAbsentee voters elect only national positions, such as president, vice president, senators, and party-list groups.</string>
    <string name="lifeDate1">Published Jan 8, 2020, 2:27:54 PM</string>
    <string name="lifeBody1" translatable="false">Frontotemporal dementia strikes early, typically in the 50s, sometimes as young as age 45. Unlike Alzheimer\'s, it doesn\'t affect memory, instead attacking the parts of the brain which control thinking, reasoning and emotions.\n

\nThe first symptom is likely a loss of interest in life and the well-being of others. A person might ignore their spouse or children\'s feelings, get uncharacteristically frustrated and say or do inappropriate things — such as laugh at a funeral.\n\nEven worse, they\'ll likely have no idea they have changed.\n

\n"\It\'s a pretty devastating disease that impacts people in the prime of their lives,"\ said neurologist Kaitlin Casaletto, an assistant professor in the Memory and Aging Center at the University of California, San Francisco. \ "It's especially hard on family members who can see the changes in their loved one they themselves often can't see.\"

Science has struggled to provide interventions to help these patients. Now, a new study published Wednesday suggests that lifestyle changes may help slow the disease progression.

Casaletto and her colleagues followed the activity levels of 105 people with the inherited form of the disease, the first study to do so in this population. They found people who ranked highest in levels of mental and physical activity slowed their functional decline from the disease by half.

"\This is an extremely important study providing the strongest evidence yet that lifestyle factors can positively impact brain health, not only for Alzheimer\'s disease, but frontotemporal lobar dementia as well,"\ said neurologist Dr. Richard Isaacson, director of the Alzheimer\'s Prevention Clinic at Weill Cornell Medicine.

"\The study is even more impactful in that patients had a gene that would definitely cause dementia, but they were still able to impact cognitive decline by over 55%,"\ Isaacson said.

"\It was a remarkable effect to see so early on,"\ Casaletto said. "\If this were a drug, we would be giving it to all of our patients."\</string>
    <string name="lifeDate2" translatable="false">Published Oct 31, 2019, 6:23:06 AM</string>
    <string name="lifeBody2">A new study finds personalized lifestyle interventions not only stopped cognitive decline in people at risk for Alzheimer\'s, but actually increased their memory and thinking skills within 18 months.\n

\n"\Our data actually shows cognitive improvement,"\ said neurologist Dr. Richard Isaacson, founder of the Alzheimer\'s Prevention Clinic at NewYork-Presbyterian and Weill Cornell Medical Center.\n

\n"\This is the first study in a real-world clinic setting showing individualized clinical management may improve cognitive function and also reduce Alzheimer\'s and cardiovascular risk,"\ Isaacson said.\n\nThe study was published Wednesday in the journal "\Alzheimer\'s and Dementia: The Journal of the Alzheimer\'s Association."\n

\n"\We need more of exactly this type of clinical trial,"\ said Harvard professor of neurology Dr. Rudy Tanzi, who co-directs the Henry and Allison McCance Center for Brain Health at Massachusetts General Hospital in Boston.\n

\n"\We spent so much time waiting for drug trials, but really there's a lot we can do to maintain brain health with our lifestyle,"\ said Tanzi, who was not involved in the study.\n

\n"\But it\'s hard to convince the public to do that in the absence of clinical trials to tell us that sleep and diet and exercise and meditation matter,"\ he said. "\The way this study was designed and carried out is a great guide for the future."\</string>
    <string name="lifeDate4">March 25, 2020</string>
    <string name="lifeBody4">"Researchers from the Harvard T.H. Chan School of Public Health conducted a massive study of the impact of health habits on life expectancy, using data from the well-known Nurses' Health Study (NHS) and the Health Professionals Follow-up Study (HPFS). This means that they had data on a huge number of people over a very long period of time. The NHS included over 78,000 women and followed them from 1980 to 2014. The HPFS included over 40,000 men and followed them from 1986 to 2014. This is over 120,000 participants, 34 years of data for women, and 28 years of data for men.

\nThe researchers looked at NHS and HPFS data on diet, physical activity, body weight, smoking, and alcohol consumption that had been collected from regularly administered, validated questionnaires.
    \nWhat is a healthy lifestyle, exactly?
\nThese five areas were chosen because prior studies have shown them to have a large impact on risk of premature death. Here is how these healthy habits were defined and measured:

\n1.   Healthy diet, which was calculated and rated based on the reported intake of healthy foods like vegetables, fruits, nuts, whole grains, healthy fats, and omega-3 fatty acids, and unhealthy foods like red and processed meats, sugar-sweetened beverages, trans fat, and sodium.

\n2.  Healthy physical activity level, which was measured as at least 30 minutes per day of moderate to vigorous activity daily.

\n3.   Healthy body weight, defined as a normal body mass index (BMI), which is between 18.5 and 24.9.

\n4.   Smoking, well, there is no healthy amount of smoking. "Healthy" here meant never having smoked.

\n5.   Moderate alcohol intake, which was measured as between 5 and 15 grams per day for women, and 5 to 30 grams per day for men. Generally, one drink contains about 14 grams of pure alcohol. That's 12 ounces of regular beer, 5 ounces of wine, or 1.5 ounces of distilled spirits.

\nResearchers also looked at data on age, ethnicity, and medication use, as well as comparison data from the National Health and Nutrition Examination Surveys and the Centers for Disease Control and Prevention's Wide-Ranging Online Data for Epidemiologic Research."</string>
</resources>